# senseibox-wifi-ap-setup

./: .gitignore  CONTRIBUTING.md  PRD.spec  README.md  install.sh  pyproject.toml
src/senseibox_wifi_ap_mode/: __init__.py  ap.py  ap_mode.py  app.py  commands.py  fake_network.py  network.py  network_cache.py  service.py
static/: index.html  setup.js  styles.css
systemd/: senseibox-wifi-ap-mode.service
tests/: test_ap.py  test_app.py  test_commands.py  test_network.py  test_network_cache.py  test_service.py  test_version.py
