[project]
name = "senseibox-wifi-ap-mode"
version = "0.1.0"
description = "Wi-Fi onboarding service for Senseibox access point mode."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "starlette>=0.37,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9",
]

[project.scripts]
senseibox-wifi-ap-mode = "senseibox_wifi_ap_mode.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/senseibox_wifi_ap_mode"]
